src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment-4.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x += y += 1\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "+=",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "AssignmentExpression",
    "operator": "+=",
    "left": {
      "type": "Identifier",
      "name": "y",
      "start": 5,
      "end": 6
    },
    "right": {
      "type": "Literal",
      "value": 1.0,
      "start": 10,
      "end": 11
    },
    "start": 5,
    "end": 11
  },
  "start": 0,
  "end": 11
}
