src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment-7.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x = a ? myFunc : function () { return c; }\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "Identifier",
    "name": "x",
    "start": 0,
    "end": 1
  },
  "right": {
    "type": "ConditionalExpression",
    "test": {
      "type": "Identifier",
      "name": "a",
      "start": 4,
      "end": 5
    },
    "consequent": {
      "type": "Identifier",
      "name": "myFunc",
      "start": 8,
      "end": 14
    },
    "alternate": {
      "type": "FunctionExpression",
      "id": null,
      "params": [],
      "body": {
        "type": "BlockStatement",
        "body": [
          {
            "type": "ReturnStatement",
            "argument": {
              "type": "Identifier",
              "name": "c",
              "start": 38,
              "end": 39
            },
            "start": 31,
            "end": 40
          }
        ],
        "start": 29,
        "end": 42
      },
      "async": false,
      "start": 17,
      "end": 42
    },
    "start": 4,
    "end": 42
  },
  "start": 0,
  "end": 42
}
