src/parser/snapshots/almond__parser__expression__tests__expr_bp_assignment-9.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"myFunc = function () { return 0; }\".into()).unwrap().1"
---
{
  "type": "AssignmentExpression",
  "operator": "=",
  "left": {
    "type": "Identifier",
    "name": "myFunc",
    "start": 0,
    "end": 6
  },
  "right": {
    "type": "FunctionExpression",
    "id": null,
    "params": [],
    "body": {
      "type": "BlockStatement",
      "body": [
        {
          "type": "ReturnStatement",
          "argument": {
            "type": "Literal",
            "value": 0.0,
            "start": 30,
            "end": 31
          },
          "start": 23,
          "end": 32
        }
      ],
      "start": 21,
      "end": 34
    },
    "async": false,
    "start": 9,
    "end": 34
  },
  "start": 0,
  "end": 34
}
