src/parser/snapshots/almond__parser__expression__tests__expr_bp_member_expr-5.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"x.y[arr.length - 1]\".into()).unwrap().1"
---
{
  "type": "MemberExpression",
  "object": {
    "type": "MemberExpression",
    "object": {
      "type": "Identifier",
      "name": "x",
      "start": 0,
      "end": 1
    },
    "property": {
      "type": "Identifier",
      "name": "y",
      "start": 2,
      "end": 3
    },
    "computed": false,
    "start": 0,
    "end": 3
  },
  "property": {
    "type": "BinaryExpression",
    "operator": "-",
    "left": {
      "type": "MemberExpression",
      "object": {
        "type": "Identifier",
        "name": "arr",
        "start": 4,
        "end": 7
      },
      "property": {
        "type": "Identifier",
        "name": "length",
        "start": 8,
        "end": 14
      },
      "computed": false,
      "start": 4,
      "end": 14
    },
    "right": {
      "type": "Literal",
      "value": 1.0,
      "start": 17,
      "end": 18
    },
    "start": 4,
    "end": 18
  },
  "computed": true,
  "start": 0,
  "end": 19
}
