src/parser/snapshots/almond__parser__expression__tests__ternary_expr-2.snap
---
source: src/parser/expression.rs
expression: "parse_expr(\"a ? x : b ? y : z\".into()).unwrap().1"
---
{
  "type": "ConditionalExpression",
  "test": {
    "type": "Identifier",
    "name": "a",
    "start": 0,
    "end": 1
  },
  "consequent": {
    "type": "Identifier",
    "name": "x",
    "start": 4,
    "end": 5
  },
  "alternate": {
    "type": "ConditionalExpression",
    "test": {
      "type": "Identifier",
      "name": "b",
      "start": 8,
      "end": 9
    },
    "consequent": {
      "type": "Identifier",
      "name": "y",
      "start": 12,
      "end": 13
    },
    "alternate": {
      "type": "Identifier",
      "name": "z",
      "start": 16,
      "end": 17
    },
    "start": 8,
    "end": 17
  },
  "start": 0,
  "end": 17
}
